	- Ag4TripleStore.executeQuery: enable reasoning (which is disabled by default)
	  by including "infer=true" in the request.
	- sample.build.properties: include properties for AG 4.4: agraph.username, agraph.password.
	- Ag4TripleStore._loadSupportingStatements: add supporting statements related with SKOS
	  taking into consideration that AG 4.4 supports owl:SymmetricProperty. 

2012-03-22  2.0.22.beta
	- More adjustments related with use of new AllegroGraph 4.4

2012-03-27  2.0.21.beta
	- OntSevlet: New "ontology exists" (oe) request dispatched
	- IOntClient.isRegisteredOntologyUri: removed unnecessary acceptEntries parameter.
	- Util.csv2html: implemented in particular to get the HTML version of CSV contents 
	  for AllegroGraph 4.4, which does not provide a direct HTML response format.
	  Used in SparqlDispatcher and Ag4TripleStore

2012-01-06  2.0.20.beta
	- WebContent/sparql.html: use relative URL (/ont?...), which will work in general
	  as well. (besides it facilitates preliminary tests in the current server migration.
	  
	- TripleStore._createTripleStoreInstance: now checks the new "agraph.version" 
	  configuration property ({sample.}build.properties) to determine which AG triple
	  store implementation to use.
	  


2011-12-15  2.0.20.beta
	Starting triple store implementation based on AllegroGraph 4.x, which is a major 
	version change wrt version 3.3, the one we've been using so far.
	Ref: http://www.franz.com/agraph/support/documentation/current/convert3to4.html
	
	It seems the two client libraries (agraph.jar and agraph-4.4.jar, which are for
	versions 3.3 and 4.4 respectively) can be used simultaneously because the base
	AG types live in different packages. This will facilitate the transitioning.

	Libraries copied from AG 4.4 to WebContent/WEB_INF/lib/
		- agraph-4.4.jar
		- openrdf-sesame-2.3.2-onejar.jar
		
	New package for the AG4 based implementation:
	     org.mmisw.ont.triplestore.allegro4
	     